--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <p>My C Certificate</p>
                 </div>
                 <div class="certificate">
-                    <img src="PYcerti.png" alt="Certificate 2">
+                    <img src="Pycerti.png" alt="Certificate 2">
                     <p>My Python Certificate</p>
                 </div>
             </div>
