--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <header>
     <div class="container">
         <h1>Nandyala Chandan Reddy</h1>
-        <p>Web Developer | Python Programmer | C Programmer | Intern at Codsoft</p>
+        <p>Web Developer | Python Programmer | C Programmer | Intern at KITSL</p>
     </div>
 </header>
 
@@ -45,7 +45,7 @@
         <p>Hi, I'm Nandyala Chandan Reddy. I am a passionate web developer with experience in creating modern and responsive websites.</p>
         <p>Currently pursuing my Btech at Marri Laxman Reddy Institute of Technology and Management in CSE branch.</p>
         <p>My Academic year started in year 2021 and ends by 2025.</p>
-        <p>Currently Working as Intern at Codsoft.</p>
+        <p>Currently Working as Intern at KEERTANA INFORMATION TECHNOLOGY SOLUTIONS LIMITED.</p>
     </div>
 </section>
 
